--- a/docs/make_gam_byregion.Rmd
+++ b/docs/make_gam_byregion.Rmd
@@ -20,6 +20,19 @@ Questions/Notes:
 7. Nutrients
 8. Inundation metrics
 
+To do 
+- Add water temperature
+- Explore WTrange, diurnal range (variance)
+- Compare Srad vs dowy
+- Random effects of station, maybe water year
+- Explore total_inund_last_year, days_since_last_inundation, 3-category inundation flag (short, long, none)
+- Model non-inundation periods
+
+To do 7/26/2022
+- Build model for non-inundation periods
+- Visualize all models
+- Random effects
+- de-seasonalized water temp
 
 
 ```{r setup, include=FALSE}
@@ -51,7 +64,7 @@ library(mgcv)
 # Read in data
 ```{r}
 
-alldata <- read_csv("data_model/model_chla_covars_gam.csv") %>%
+alldata0 <- read_csv("data_model/model_chla_covars_gam.csv") %>%
   mutate(month = lubridate::month(date),
          year  = lubridate::year(date),
          rdoy  = lubridate::yday(date) + 92,
@@ -68,7 +81,19 @@ alldata <- read_csv("data_model/model_chla_covars_gam.csv") %>%
          inund_fac = as.factor(inund_fac)) %>%
   rename(station  = station_wq_chl)
 
+str(alldata0)
 ```
+
+Filter to inundation period
+```{r}
+inundPd <- alldata0 %>% filter(inundation == 1) 
+inMin <- min(inundPd$dowy)
+inMax <- max(inundPd$dowy)
+
+alldata <- alldata0 %>%
+  filter(dowy >= inMin & dowy <= inMax)
+```
+
 
 ## Downstream
 
@@ -82,22 +107,13 @@ downstream <- alldata %>% filter(region == "below")
 downstream_scaled <- downstream %>%
   mutate(across(.cols = c(log_idys,log_qsdy,diurnal_range:Sradmwk), ~ scale(.x)))
   
-d <- downstream_scaled
+d.idys <- downstream_scaled
 
-downstream_s_long <- pivot_longer(d, cols = c(log_idys,t_qsdy,diurnal_range:Sradmwk), names_to = "Parameter", values_to = "Value")
+downstream_s_long <- pivot_longer(d.idys, cols = c(log_idys,t_qsdy,diurnal_range:Sradmwk), names_to = "Parameter", values_to = "Value")
 
 ggplot(downstream_s_long) + geom_violin(aes(x = Parameter, y = Value)) + facet_wrap(~Parameter, scales = "free")
 ```
 
-### constrain to "day of water year" when Yolo Bypass gets inundated
-```{r}
-d.idys = subset(d, d$inundation == 1)
-range(d.idys$dowy)
-# min "day of water year" 65; max 214
-
-d.idys = subset(d, (d$dowy >= 65 & d$dowy <= 214))
-table(d.idys$inundation)
-```
 
 ### Model
 
@@ -129,18 +145,52 @@ gamd1.1 <- gam(log_chla ~ s(log_qsdy, by = inundation) + s(dowy, bs = "cc"), met
 gamd1.2 <- gam(log_chla ~ te(log_qsdy, dowy, by = inundation), method = "REML", data = d.idys, family = "gaussian")
 gamd1.3 <- gam(log_chla ~ te(log_idys, dowy, by = inundation), method = "REML", data = d.idys, family = "gaussian")
 gamd1.4 <- gam(log_chla ~ te(log_qsdy, dowy, by = inund_fac),  method = "REML", data = d.idys, family = "gaussian")
+gamd1.5 <- gam(log_chla ~ s(WTmwk, by = inundation), method = "REML", data = d.idys, family = "gaussian")
+gamd1.6 <- gam(log_chla ~ s(WTmwk, by = inundation) + s(dowy, bs = "cc"), method = "REML", data = d.idys, family = "gaussian")
+gamd1.7 <- gam(log_chla ~ s(log_qsdy, by = inundation) + s(WTmwk, bs = "cc"), method = "REML", data = d.idys, family = "gaussian")
+gamd1.8 <- gam(log_chla ~ s(log_qsdy, by = inundation) + s(Sradmwk, bs = "cc"), method = "REML", data = d.idys, family = "gaussian")
+gamd1.9 <- gam(log_chla ~ te(log_qsdy, WTmwk, by = inundation), method = "REML", data = d.idys, family = "gaussian")
+gamd1.10 <- gam(log_chla ~ te(log_qsdy, Sradmwk, by = inundation), method = "REML", data = d.idys, family = "gaussian")
+gamd1.11 <- gam(log_chla ~ te(log_idys, Sradmwk, by = inundation), method = "REML", data = d.idys, family = "gaussian")
+gamd1.12 <- gam(log_chla ~ te(log_idys, WTmwk, by = inundation), method = "REML", data = d.idys, family = "gaussian")
+gamd1.13 <- gam(log_chla ~ te(log_qsdy, dowy), method = "REML", data = d.idys, family = "gaussian")
+gamd1.14 <- gam(log_chla ~ te(log_idys, dowy), method = "REML", data = d.idys, family = "gaussian")
 
-AIC(gamd0, gamd1.0, gamd1.1, gamd1.2, gamd1.3, gamd1.4)
+gamd1.15 <- gam(log_chla ~ s(total_inund_last_year), method = "REML", data = d.idys, family = "gaussian")
+gamd1.16 <- gam(log_chla ~ s(days_since_last_inundation), method = "REML", data = d.idys, family = "gaussian")
+gamd1.17 <- gam(log_chla ~ s(diurnal_range), method = "REML", data = d.idys, family = "gaussian")
+gamd1.18 <- gam(log_chla ~ s(WTrangemwk), method = "REML", data = d.idys, family = "gaussian")
+gamd1.19 <- gam(log_chla ~ s(log_qsdy), method = "REML", data = d.idys, family = "gaussian")
 
-gam.check(gamd1.1)
-gam.check(gamd1.2)
+gamd1.20 <- gam(log_chla ~ te(log_qsdy, total_inund_last_year, dowy), method = "REML", data = d.idys, family = "gaussian")
+gamd1.21 <- gam(log_chla ~ te(log_qsdy, days_since_last_inundation, dowy), method = "REML", data = d.idys, family = "gaussian")
+gamd1.22 <- gam(log_chla ~ te(log_qsdy, diurnal_range, dowy), method = "REML", data = d.idys, family = "gaussian")
+gamd1.23 <- gam(log_chla ~ te(log_qsdy, WTrangemwk, dowy), method = "REML", data = d.idys, family = "gaussian")
+gamd1.24 <- gam(log_chla ~ te(log_qsdy, WTmwk, dowy), method = "REML", data = d.idys, family = "gaussian")
+
+
+AIC(gamd1.20, gamd1.21, gamd1.22, gamd1.23, gamd1.24, gamd1.13, gamd1.2)
+AIC(gamd0, gamd1.15, gamd1.16, gamd1.17, gamd1.18, gamd1.19)
+# total_inund_last_year, days_since_last_inundation, diurnal_range, WTrangemwk
+
+AIC(gamd0, gamd1.0, gamd1.1, gamd1.2, gamd1.3, gamd1.4, gamd1.5, gamd1.6, gamd1.7, gamd1.8, gamd1.9, gamd1.10, gamd1.11, gamd1.12, gamd1.13, gamd1.14)
+#ggplot(alldata0, aes(date, WTrangemwk)) + geom_line(aes(color = region))
+#ggplot(alldata0, aes(doy1998, WTmwk)) + geom_line(aes(color = region))
+
+resd <- (AIC(gamd0, gamd1.0, gamd1.1, gamd1.2, gamd1.3, gamd1.4, gamd1.5, gamd1.6, gamd1.7, gamd1.8, gamd1.9, gamd1.10, gamd1.11, gamd1.12, gamd1.13, gamd1.14, gamd1.15, gamd1.16, gamd1.17, gamd1.18, gamd1.19, gamd1.20, gamd1.21, gamd1.22, gamd1.23, gamd1.24))
+resd %>% arrange(AIC)
+
+
+
 gam.check(gamd1.3)
-gam.check(gamd1.4)
+gam.check(gamd1.13)
+gam.check(gamd1.24)
+gam.check(gamd1.23)
 
-summary(gamd1.1)
-summary(gamd1.2)
-summary(gamd1.3)
-summary(gamd1.4)
+summary(gamd1.3) #28% R2 0.26
+summary(gamd1.13) # 26.4% R2 0.243
+summary(gamd1.24) #31% 0.272
+summary(gamd1.23) # 30% 0.264
 
 resid = residuals(gamd1.4)
 acf(resid)
@@ -426,18 +476,7 @@ yolo <- alldata %>% filter(region == "yolo")
 yolo_scaled <- yolo %>%
   mutate(across(.cols = c(log_idys,log_qsdy,diurnal_range:Sradmwk), ~ scale(.x)))
   
-yo <- yolo_scaled
-```
-
-### constrain to "day of water year" when Yolo Bypass gets inundated
-
-```{r}
-yo.idys = subset(yo, yo$inundation == 1)
-range(yo.idys$dowy)
-# min "day of water year" 65; max 214
-
-yo.idys = subset(yo, (yo$dowy >= 82 & yo$dowy <= 215))
-table(yo.idys$inundation)
+yo.idys <- yolo_scaled
 ```
 
 ### Model
@@ -448,23 +487,55 @@ gamyo1.1 <- gam(log_chla ~ s(log_qsdy, by = inundation) + s(dowy, bs = "cc"), me
 gamyo1.2 <- gam(log_chla ~ te(log_qsdy, dowy, by = inundation), method = "REML", data = yo.idys, family = "gaussian")
 gamyo1.3 <- gam(log_chla ~ te(log_idys, dowy, by = inundation), method = "REML", data = yo.idys, family = "gaussian")
 gamyo1.4 <- gam(log_chla ~ te(log_qsdy, dowy, by = inund_fac),  method = "REML", data = yo.idys, family = "gaussian")
-gamyo1.5 <- gam(log_chla ~ te(log_qsdy, log_idys, dowy),  method = "REML", data = yo.idys, family = "gaussian")
-gamyo1.6 <- gam(log_chla ~ te(log_qsdy, dowy), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.5 <- gam(log_chla ~ s(WTmwk, by = inundation), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.6 <- gam(log_chla ~ s(WTmwk, by = inundation) + s(dowy, bs = "cc"), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.7 <- gam(log_chla ~ s(log_qsdy, by = inundation) + s(WTmwk, bs = "cc"), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.8 <- gam(log_chla ~ s(log_qsdy, by = inundation) + s(Sradmwk, bs = "cc"), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.9 <- gam(log_chla ~ te(log_qsdy, WTmwk, by = inundation), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.10 <- gam(log_chla ~ te(log_qsdy, Sradmwk, by = inundation), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.11 <- gam(log_chla ~ te(log_idys, Sradmwk, by = inundation), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.12 <- gam(log_chla ~ te(log_idys, WTmwk, by = inundation), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.13 <- gam(log_chla ~ te(log_qsdy, dowy), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.14 <- gam(log_chla ~ te(log_idys, dowy), method = "REML", data = yo.idys, family = "gaussian")
 
-AIC(gamyo0, gamyo1.0, gamyo1.1, gamyo1.2, gamyo1.3, gamyo1.4, gamyo1.5, gamyo1.6)
+gamyo1.15 <- gam(log_chla ~ s(total_inund_last_year, k = 6), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.16 <- gam(log_chla ~ s(days_since_last_inundation), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.17 <- gam(log_chla ~ s(diurnal_range), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.18 <- gam(log_chla ~ s(WTrangemwk), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.19 <- gam(log_chla ~ s(log_qsdy), method = "REML", data = yo.idys, family = "gaussian")
+
+gamyo1.20 <- gam(log_chla ~ te(log_qsdy, total_inund_last_year, dowy), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.21 <- gam(log_chla ~ te(log_qsdy, days_since_last_inundation, dowy), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.22 <- gam(log_chla ~ te(log_qsdy, diurnal_range, dowy), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.23 <- gam(log_chla ~ te(log_qsdy, WTrangemwk, dowy), method = "REML", data = yo.idys, family = "gaussian")
+gamyo1.24 <- gam(log_chla ~ te(log_qsdy, WTmwk, dowy), method = "REML", data = yo.idys, family = "gaussian")
+
+
+# AIC
+res <- (AIC(gamyo0, gamyo1.0, gamyo1.1, gamyo1.2, gamyo1.3, gamyo1.4, gamyo1.5, gamyo1.6, gamyo1.7, gamyo1.8, gamyo1.9, gamyo1.10, gamyo1.11, gamyo1.12, gamyo1.13, gamyo1.14, gamyo1.15, gamyo1.16, gamyo1.17, gamyo1.18, gamyo1.19, gamyo1.20, gamyo1.21, gamyo1.22, gamyo1.23, gamyo1.24))
+res %>% arrange(AIC)
+
+
+summary(gamyo1.2) # 64.3% R2 0.603
+summary(gamyo1.13) # 61.2% R2 0.578
+summary(gamyo1.20) # 72% R2 0.66 BEST ONE
+summary(gamyo1.21) # 69.5% R2 0.635 
+
+
 
 par(mfrow = c(2,2))
 gam.check(gamyo1.1)
 gam.check(gamyo1.2)
 gam.check(gamyo1.3)
 gam.check(gamyo1.4)
+gam.check(gamyo1.20)
 
 summary(gamyo1.1)
 summary(gamyo1.2)
 summary(gamyo1.3)
 summary(gamyo1.4)
 
-resid = residuals(gamyo1.4)
+resid = residuals(gamyo1.20)
 acf(resid)
 pacf(resid)
 ```
@@ -813,7 +884,72 @@ lines(x = gamyo.i1$log_qsdy, y = gamyo.i1$fit, lwd = 2, col = rgb(20, 20, 150, a
 
 ```
 
+#### Visualize gamyo1.20
 
+```{r}
+
+# Determine the confidence interval to present in your figure and determine the
+# t-distribution value of which to multiply the standard error
+interval_value = 0.95
+t_distribution_probability = 1.0 - (1-interval_value)/2
+CI_factor = qt(t_distribution_probability, Inf)
+
+#~ Generate a data frame with the sequence from the minimum to the maximum
+# observed value of the predictor variable: day of water year
+mod_q_range = range(na.omit(yo.idys$log_qsdy))
+med.dowy = median(yo.idys$dowy)
+qsdy.ser = seq(from = mod_q_range[1], to = mod_q_range[2], by = 0.05)
+n = length(qsdy.ser)
+new_dat_yo1 = data.frame(cbind(log_idys = qsdy.ser, dowy = rep(med.dowy, n)))
+new_dat_yo1$inundation = sample(c(0,1), n, replace = TRUE)
+                       
+#~ Use the *predict()* function to estimate model fit and standard error
+preds = predict(gam1.3, newdata = new_dat_yo1, se.fit = TRUE)
+
+# Multiply the standard error fit by the t-distribution value to estimate
+# the upper and lower confidence interval limits
+fit = preds$fit
+upper = fit - CI_factor*preds$se.fit
+lower = fit + CI_factor*preds$se.fit
+
+new_dat_yo1 = cbind(new_dat_yo1, fit, upper, lower)
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+#~~ Visualize the model
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+# Plot the raw data and make the axes and labels aesthetically pleasing
+par(mfrow = c(1,1), mar = c(2.5, 4.5, 2,4.5) + 0.1, oma = c(1.5,0,0.5,0))
+
+# separate by inundation flag
+gamyo.i0 = subset(new_dat_yo1, new_dat_yo1$inundation == 0)
+gamyo.i1 = subset(new_dat_yo1, new_dat_yo1$inundation == 1)
+
+# plot the actual data points
+plot(yo.idys$log_chla ~ yo.idys$log_idys, pch = 20, col = gray(0.1,0.2), las = 1, ylab = "", xlab = "")
+#mtext(text = "Log(Chlorophyll-a)", side = 4, line = 3)
+mtext(text = expression(log[e]~"(Chlorophyll-a)"), side = 2, line = 2.5)
+#y_labs = c(0.0001,0.0003,0.001, 0.003,0.01,0.033,0.1,0.33, 1, 3, 8, 20, 55, 150)[c(T,F)]
+#axis(side = 4, at = log(y_labs), labels = y_labs, las=1)
+mtext(text = expression(log[e]~"(Inundation Days)"), side = 1, line = 2.25)
+
+# Use the polygon function to add the CI
+polygon(x = c(gamyo.i0$log_idys, max(gamyo.i0$log_idys), rev(gamyo.i0$log_idys), gamyo.i0$log_idys[1]),
+        y = c(gamyo.i0$lower, gamyo.i0$upper[length(gamyo.i0$upper)], rev(gamyo.i0$upper), gamyo.i0$lower[1]), border = NA, 
+        col = rgb(20, 200, 20, alpha = 150, maxColorValue=255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = gamyo.i0$log_idys, y = gamyo.i0$fit, lwd = 2, col = rgb(20, 150, 20, alpha = 255, maxColorValue = 255))
+
+# Use the polygon function to add the CI
+polygon(x = c(gamyo.i1$log_idys, max(gamyo.i1$log_idys), rev(gamyo.i1$log_idys), gamyo.i1$log_idys[1]),
+        y = c(gamyo.i1$lower, gamyo.i1$upper[length(gamyo.i1$upper)], rev(gamyo.i1$upper), gamyo.i1$lower[1]), border = NA, 
+        col = rgb(20, 20, 200, alpha = 150, maxColorValue=255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = gamyo.i1$log_idys, y = gamyo.i1$fit, lwd = 2, col = rgb(20, 20, 150, alpha = 255, maxColorValue = 255))
+
+```
 
 ## Upstream
 ```{r}
@@ -825,18 +961,11 @@ upstream <- alldata %>% filter(region == "above")
 upstream_scaled <- upstream %>%
   mutate(across(.cols = c(log_idys,t_qsdy,diurnal_range:Sradmwk), ~ scale(.x)))
   
-u <- upstream_scaled
+u.idys <- upstream_scaled
 
-upstream_s_long <- pivot_longer(u, cols = c(log_idys,t_qsdy,diurnal_range:Sradmwk), names_to = "Parameter", values_to = "Value")
+upstream_s_long <- pivot_longer(u.idys, cols = c(log_idys,t_qsdy,diurnal_range:Sradmwk), names_to = "Parameter", values_to = "Value")
 
 ggplot(upstream_s_long) + geom_violin(aes(x = Parameter, y = Value)) + facet_wrap(~Parameter, scales = "free")
-```
-
-### constrain to "day of water year" when the region has inundation? How do we want to pick dates?
-
-```{r}
-u.idys = subset(u, (u$dowy >= 67 & u$dowy <= 214))
-table(u.idys$inundation)
 ```
 
 ### Model 
@@ -845,29 +974,186 @@ Need different models here, not inundation (maybe season or precip?)
 gamu0 <- gam(log_chla ~ 1, method = "REML", data = u.idys, family = "gaussian")
 gamu1.0 <- gam(log_chla ~ s(log_qsdy), method = "REML", data = u.idys, family = "gaussian")
 gamu1.1 <- gam(log_chla ~ s(log_qsdy) + s(dowy, bs = "cc"), method = "REML", data = u.idys, family = "gaussian")
-gamu1.2 <- gam(log_chla ~ te(log_qsdy, dowy), method = "REML", data = u.idys, family = "gaussian")
-gamu1.3 <- gam(log_chla ~ te(log_qsdy, WTmwk, dowy), method = "REML", data = u.idys, family = "gaussian")
-gamu1.4 <- gam(log_chla ~ te(og_qsdy, Sradmwk, dowy),  method = "REML", data = u.idys, family = "gaussian")
+gamu1.2 <- gam(log_chla ~ s(WTmwk), method = "REML", data = u.idys, family = "gaussian")
+gamu1.3 <- gam(log_chla ~ s(WTmwk) + s(dowy, bs = "cc"), method = "REML", data = u.idys, family = "gaussian")
+gamu1.4 <- gam(log_chla ~ s(log_qsdy) + s(WTmwk), method = "REML", data = u.idys, family = "gaussian")
+gamu1.5 <- gam(log_chla ~ s(log_qsdy) + s(WTmwk) + s(dowy, bs = "cc"), method = "REML", data = u.idys, family = "gaussian")
+gamu1.6 <- gam(log_chla ~ te(log_qsdy, dowy), method = "REML", data = u.idys, family = "gaussian")
+gamu1.7 <- gam(log_chla ~ te(log_qsdy, WTmwk, dowy), method = "REML", data = u.idys, family = "gaussian")
+gamu1.8 <- gam(log_chla ~ te(log_qsdy, WTrangemwk, dowy), method = "REML", data = u.idys, family = "gaussian")
+gamu1.9 <- gam(log_chla ~ te(log_qsdy, diurnal_range, dowy), method = "REML", data = u.idys, family = "gaussian")
+gamu1.10 <- gam(log_chla ~ te(log_qsdy, WTmwk), method = "REML", data = u.idys, family = "gaussian")
+gamu1.11 <- gam(log_chla ~ te(log_qsdy, WTrangemwk), method = "REML", data = u.idys, family = "gaussian")
+gamu1.12 <- gam(log_chla ~ te(log_qsdy, diurnal_range), method = "REML", data = u.idys, family = "gaussian")
 
-AIC(gamu0, gamu1.0, gamu1.1, gamu1.2, gamu1.3, gamu1.4)
+
+# AIC
+resu <- AIC(gamu0, gamu1.0, gamu1.1, gamu1.2, gamu1.3, gamu1.4, gamu1.5, gamu1.6, gamu1.7, gamu1.8, gamu1.9, gamu1.10, gamu1.11, gamu1.12)
+resu %>% arrange(AIC)
+
+
 
 par(mfrow = c(2,2))
-gam.check(gamu1.1)
 gam.check(gamu1.2)
-gam.check(gamu1.3)
-gam.check(gamu1.4)
+gam.check(gamu1.8)
+gam.check(gamu1.7)
+gam.check(gamu1.10)
 
-summary(gamu1.0)
-summary(gamu1.1)
-summary(gamu1.2) 
-summary(gamu1.3)# best model: 39.4%
-summary(gamu1.4)
+summary(gamu1.7) # 38.1% R2 0.331
+summary(gamu1.8) # 33.7% R2 0.301
+summary(gamu1.2) # 28.97% R2 0.271
+summary(gamu1.10) # 30.5% R2 0.29
 
-resid = residuals(gamu1.3)
+
+resid = residuals(gamu1.10)
 acf(resid)
 pacf(resid)
+```
+
+
+### Visualizing gamu1.7 (flow + water temp. + dowy) for Sac River across day of water year
+
+```{r}
+
+# Determine the confidence interval to present in your figure and determine the
+# t-distribution value of which to multiply the standard error
+interval_value = 0.88
+t_distribution_probability = 1.0 - (1-interval_value)/2
+CI_factor = qt(t_distribution_probability, Inf)
+
+#~ Generate a data frame with the sequence from the minimum to the maximum
+# series of 5-95 percentile values of the predictor variable: day of water year
+dowy.range = range(u.idys$dowy)
+dowy.ser = seq(from = dowy.range[1], to = dowy.range[2], by = 1)
+n = length(dowy.ser)
+
+# take 10th and 90th percentile values of all other predictors
+lqsdy.1 = quantile(u.idys$log_qsdy, probs = 0.1)
+lqsdy.9 = quantile(u.idys$log_qsdy, probs = 0.9)
+lqsdy.5 = quantile(u.idys$log_qsdy, probs = 0.5)
+
+wtemp.1 = quantile(u.idys$WTmwk, probs = 0.1)
+wtemp.9 = quantile(u.idys$WTmwk, probs = 0.9)
+wtemp.5 = quantile(u.idys$WTmwk, probs = 0.5)
+
+new_dat_1 = data.frame(cbind(log_qsdy = sample(c(lqsdy.1, lqsdy.9), n, replace = TRUE),
+                             WTmwk = rep(wtemp.5, n), dowy = dowy.ser))
+
+new_dat_2 = data.frame(cbind(log_qsdy = rep(lqsdy.5, n), 
+                             WTmwk = sample(c(wtemp.1, wtemp.9), n, replace = TRUE),
+                             dowy = dowy.ser))
+
+#~ Use the *predict()* function to estimate model fit and standard error
+preds.1 = predict(gamu1.7, newdata = new_dat_1, se.fit = TRUE)
+preds.2 = predict(gamu1.7, newdata = new_dat_2, se.fit = TRUE)
+
+# Multiply the standard error fit by the t-distribution value to estimate
+fit = preds.1$fit
+upper = fit - CI_factor*preds.1$se.fit
+lower = fit + CI_factor*preds.1$se.fit
+new_dat_1 = cbind(new_dat_1, fit, upper, lower)
+
+fit = preds.2$fit
+upper = fit - CI_factor*preds.2$se.fit
+lower = fit + CI_factor*preds.2$se.fit
+new_dat_2 = cbind(new_dat_2, fit, upper, lower)
+
+# separate by log_qsdy at high and low value
+gam.i0 = subset(new_dat_1, new_dat_1$log_qsdy == lqsdy.1)
+gam.i1 = subset(new_dat_1, new_dat_1$log_qsdy == lqsdy.9)
+
+# separate by WTmwk at high and low value
+gam.lowwt = subset(new_dat_2, new_dat_2$WTmwk == wtemp.1)
+gam.hghwt = subset(new_dat_2, new_dat_2$WTmwk == wtemp.9)
+
+new.dat = rbind(new_dat_1, new_dat_2)
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+#~~ Visualize the model for low and high flow for day of water year
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+# Plot the raw data and make the axes and labels aesthetically pleasing
+par(mfrow = c(1,1), mar = c(2.5, 4.5, 2,4.5) + 0.1, oma = c(1.5,0,0.5,0))
+
+# plot the actual data points separately for inundated and non-inundated
+plot(u.idys$log_chla ~ u.idys$dowy, pch = 20, col = "green", las = 1, ylab = "", xlab = "")
+#mtext(text = "Log(Chlorophyll-a)", side = 4, line = 3)
+mtext(text = expression(log[e]~"(Chlorophyll-a)"), side = 2, line = 2.5)
+#y_labs = c(0.0001,0.0003,0.001, 0.003,0.01,0.033,0.1,0.33, 1, 3, 8, 20, 55, 150)[c(T,F)]
+#axis(side = 4, at = log(y_labs), labels = y_labs, las=1)
+mtext(text = "Day of water year", side = 1, line = 2.25)
+
+# Use the polygon function to add the CI
+polygon(x = c(gam.i0$dowy, max(gam.i0$dowy), rev(gam.i0$dowy), gam.i0$dowy[1]),
+        y = c(gam.i0$lower, gam.i0$upper[length(gam.i0$upper)], rev(gam.i0$upper), gam.i0$lower[1]), border = NA, 
+        col = rgb(20, 200, 20, alpha = 150, maxColorValue = 255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = gam.i0$dowy, y = gam.i0$fit, lwd = 2, col = rgb(20, 150, 20, alpha = 255, maxColorValue = 255))
+
+# Use the polygon function to add the CI
+polygon(x = c(gam.i1$dowy, max(gam.i1$dowy), rev(gam.i1$dowy), gam.i1$dowy[1]),
+        y = c(gam.i1$lower, gam.i1$upper[length(gam.i1$upper)], rev(gam.i1$upper), gam.i1$lower[1]), border = NA, 
+        col = rgb(20, 20, 200, alpha = 150, maxColorValue=255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = gam.i1$dowy, y = gam.i1$fit, lwd = 2, col = rgb(20, 20, 150, alpha = 255, maxColorValue = 255))
+
+
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+#~~ Visualize the model for low and high water temperature for day of water year
+#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+library("plot3D")
+library("ggplot2")
+
+# Plot the raw data and make the axes and labels aesthetically pleasing
+par(mfrow = c(1,1), mar = c(2.5, 4.5, 2,4.5) + 0.1, oma = c(1.5,0,0.5,0))
+
+# plot the actual data points separately for inundated and non-inundated
+plot(u.idys$log_chla ~ u.idys$dowy, pch = 20, col = "gray", las = 1, ylab = "", xlab = "")
+#mtext(text = "Log(Chlorophyll-a)", side = 4, line = 3)
+mtext(text = expression(log[e]~"(Chlorophyll-a)"), side = 2, line = 2.5)
+#y_labs = c(0.0001,0.0003,0.001, 0.003,0.01,0.033,0.1,0.33, 1, 3, 8, 20, 55, 150)[c(T,F)]
+#axis(side = 4, at = log(y_labs), labels = y_labs, las=1)
+mtext(text = "Day of water year", side = 1, line = 2.25)
+
+# Use the polygon function to add the CI
+polygon(x = c(gam.lowwt$dowy, max(gam.lowwt$dowy), rev(gam.lowwt$dowy), gam.lowwt$dowy[1]),
+        y = c(gam.lowwt$lower, gam.lowwt$upper[length(gam.lowwt$upper)], rev(gam.lowwt$upper), gam.lowwt$lower[1]), border = NA, 
+        col = rgb(20, 200, 20, alpha = 150, maxColorValue = 255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = gam.lowwt$dowy, y = gam.lowwt$fit, lwd = 2, col = rgb(20, 150, 20, alpha = 255, maxColorValue = 255))
+
+# Use the polygon function to add the CI
+polygon(x = c(gam.hghwt$dowy, max(gam.hghwt$dowy), rev(gam.hghwt$dowy), gam.hghwt$dowy[1]),
+        y = c(gam.hghwt$lower, gam.hghwt$upper[length(gam.hghwt$upper)], rev(gam.hghwt$upper), gam.hghwt$lower[1]), border = NA, 
+        col = rgb(20, 20, 200, alpha = 150, maxColorValue=255))
+
+# Use the lines() function to add the mean model prediction
+lines(x = gam.hghwt$dowy, y = gam.hghwt$fit, lwd = 2, col = rgb(20, 20, 150, alpha = 255, maxColorValue = 255))
+
+
+# trying other ways to visualize
+
+# surf3D(new.dat$log_qsdy, new.dat$WTmwk, new.dat$log_chla, colvar = new.dat$log_chla,
+#        colkey = TRUE, box = TRUE, bty = "b", phi = 20, theta = 120)
+
+#install.packages("visreg")
+library("visreg")
+
+visreg2d(gamu1.7, xvar='log_qsdy', yvar='WTmwk', scale='response', plot.type="image")
+visreg2d(gamu1.7, xvar='log_qsdy', yvar='WTmwk', scale='response', plot.type="persp")
+
+# ggplot(new.dat, aes(x = log_qsdy, y = WTmwk)) + geom_tile(aes(fill = fit))
+
 
 ```
+
+
+
+
+
 
 
 
@@ -881,23 +1167,13 @@ cache <- alldata %>% filter(region == "cache")
 cache_scaled <- cache %>%
   mutate(across(.cols = c(log_idys,t_qsdy,diurnal_range:Sradmwk), ~ scale(.x)))
   
-c <- cache_scaled
+c.idys <- cache_scaled
 
-cache_s_long <- pivot_longer(d, cols = c(log_idys,t_qsdy,diurnal_range:Sradmwk), names_to = "Parameter", values_to = "Value")
+cache_s_long <- pivot_longer(c.idys, cols = c(log_idys,t_qsdy,diurnal_range:Sradmwk), names_to = "Parameter", values_to = "Value")
 
 ggplot(cache_s_long) + geom_violin(aes(x = Parameter, y = Value)) + facet_wrap(~Parameter, scales = "free")
 ```
 
-### constrain to "day of water year" when the region has inundation
-
-```{r}
-c.idys = subset(c, c$inundation == 1)
-range(c.idys$dowy)
-# min "day of water year" 67; max 214
-
-c.idys = subset(c, (c$dowy >= 67 & c$dowy <= 214))
-table(c.idys$inundation)
-```
 
 ### Model
 
@@ -908,19 +1184,45 @@ gamc1.1 <- gam(log_chla ~ s(t_qsdy, by = inundation) + s(dowy, bs = "cc"), metho
 gamc1.2 <- gam(log_chla ~ te(t_qsdy, dowy, by = inundation), method = "REML", data = c.idys, family = "gaussian")
 gamc1.3 <- gam(log_chla ~ te(log_idys, dowy, by = inundation), method = "REML", data = c.idys, family = "gaussian")
 gamc1.4 <- gam(log_chla ~ te(t_qsdy, dowy, by = inund_fac),  method = "REML", data = c.idys, family = "gaussian")
+gamc1.5 <- gam(log_chla ~ s(WTmwk, by = inundation), method = "REML", data = c.idys, family = "gaussian")
+gamc1.6 <- gam(log_chla ~ s(WTmwk, by = inundation) + s(dowy, bs = "cc"), method = "REML", data = c.idys, family = "gaussian")
+gamc1.7 <- gam(log_chla ~ s(t_qsdy, by = inundation) + s(WTmwk, bs = "cc"), method = "REML", data = c.idys, family = "gaussian")
+gamc1.8 <- gam(log_chla ~ s(t_qsdy, by = inundation) + s(Sradmwk, bs = "cc"), method = "REML", data = c.idys, family = "gaussian")
+gamc1.9 <- gam(log_chla ~ te(t_qsdy, WTmwk, by = inundation), method = "REML", data = c.idys, family = "gaussian")
+gamc1.10 <- gam(log_chla ~ te(t_qsdy, Sradmwk, by = inundation), method = "REML", data = c.idys, family = "gaussian")
+gamc1.11 <- gam(log_chla ~ te(log_idys, Sradmwk, by = inundation), method = "REML", data = c.idys, family = "gaussian")
+gamc1.12 <- gam(log_chla ~ te(log_idys, WTmwk, by = inundation), method = "REML", data = c.idys, family = "gaussian")
+gamc1.13 <- gam(log_chla ~ te(t_qsdy, dowy), method = "REML", data = c.idys, family = "gaussian")
+gamc1.14 <- gam(log_chla ~ te(log_idys, dowy), method = "REML", data = c.idys, family = "gaussian")
 
-AIC(gamc0, gamc1.0, gamc1.1, gamc1.2, gamc1.3, gamc1.4)
+gamc1.15 <- gam(log_chla ~ s(total_inund_last_year, k = 6), method = "REML", data = c.idys, family = "gaussian")
+gamc1.16 <- gam(log_chla ~ s(days_since_last_inundation), method = "REML", data = c.idys, family = "gaussian")
+gamc1.17 <- gam(log_chla ~ s(diurnal_range), method = "REML", data = c.idys, family = "gaussian")
+gamc1.18 <- gam(log_chla ~ s(WTrangemwk), method = "REML", data = c.idys, family = "gaussian")
+gamc1.19 <- gam(log_chla ~ s(t_qsdy), method = "REML", data = c.idys, family = "gaussian")
+
+gamc1.20 <- gam(log_chla ~ te(t_qsdy, total_inund_last_year), method = "REML", data = c.idys, family = "gaussian")
+gamc1.21 <- gam(log_chla ~ te(t_qsdy, days_since_last_inundation), method = "REML", data = c.idys, family = "gaussian")
+gamc1.22 <- gam(log_chla ~ te(t_qsdy, diurnal_range), method = "REML", data = c.idys, family = "gaussian")
+gamc1.23 <- gam(log_chla ~ te(t_qsdy, WTrangemwk), method = "REML", data = c.idys, family = "gaussian")
+gamc1.24 <- gam(log_chla ~ te(t_qsdy, WTmwk), method = "REML", data = c.idys, family = "gaussian")
+
+
+resc <- (AIC(gamc0, gamc1.0, gamc1.1, gamc1.2, gamc1.3, gamc1.4, gamc1.5, gamc1.6, gamc1.7, gamc1.8, gamc1.9, gamc1.10, gamc1.11, gamc1.12, gamc1.13, gamc1.14,  gamc1.16, gamc1.17, gamc1.18, gamc1.19, gamc1.20, gamc1.21, gamc1.22, gamc1.23, gamc1.24))
+resc %>% arrange(AIC)
+
+# Best is 1.9
 
 par(mfrow = c(2,2))
-gam.check(gamc1.1)
+gam.check(gamc1.9)
+gam.check(gamc1.10)
+gam.check(gamc1.22)
 gam.check(gamc1.2)
-gam.check(gamc1.3)
-gam.check(gamc1.4)
 
-summary(gamc1.0)
-summary(gamc1.1)
-summary(gamc1.2) # best model: 37.6% deviance explained
-summary(gamc1.4)
+summary(gamc1.9) # 40% R2 0.329
+summary(gamc1.10) # 36% R2 0.289
+summary(gamc1.22) # 28.8% R2 0.248
+summary(gamc1.2) # 37.6% 0.297
 
 resid = residuals(gamc1.2)
 acf(resid)
